--- a/scss/modules/advantages/_common.scss
+++ b/scss/modules/advantages/_common.scss
@@ -1,5 +1,8 @@
 .advantages {
-    padding: ($bit * 15) ($bit * 4) ($bit * 20);
+    padding: ($bit * 8) ($bit * 4) ($bit * 10);
+    @include breakpoint(medium) {
+        padding: ($bit * 15) ($bit * 4) ($bit * 20);
+    }
     background-color: color(light-purple);
 }
 
