--- a/scss/modules/grid/_common.scss
+++ b/scss/modules/grid/_common.scss
@@ -19,20 +19,21 @@ $columns-gutter: (
         }
     }
 }
-.grid_align_center {
-    align-items: center;
-}
-.grid_align_end {
-    align-items: flex-end;
-}
 .grid_justify_center {
     justify-content: center;
 }
-.grid_justify_between {
-    justify-content: space-between;
-}
 .grid_justify_end {
     justify-content: flex-end;
+}
+@each $name, $size in $breakpoints {
+    @include breakpoint($size) {
+        .grid_justify-#{$name}_center {
+            justify-content: center;
+        }
+        .grid_justify-#{$name}_end {
+            justify-content: flex-end;
+        }
+    }
 }
 
 .columns {
@@ -58,18 +59,6 @@ $columns-gutter: (
 
             &shrink {
                 flex: 0px 0 0;
-            }
-        }
-    }
-}
-
-@each $name, $size in $breakpoints {
-    @include breakpoint($name only) {
-        .order-#{$name}- {
-            @for $i from 1 through 6 {
-                &#{$i} {
-                    order: $i;
-                }
             }
         }
     }
