--- a/scss/modules/typography/headers.scss
+++ b/scss/modules/typography/headers.scss
@@ -9,7 +9,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @for $i from 6 through 2 {
     h#{7 - $i} {
-        font-size: rem-calc(18) + rem-calc(8 * $i / 2);
+        font-size: rem-calc(12) + rem-calc(8 * $i / 2);
         @include breakpoint(medium) {
             font-size: rem-calc(22) + rem-calc(8 * $i / 2);
         }
@@ -20,7 +20,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: rem-calc(18) + rem-calc(8 * 5 / 2);
+    font-size: rem-calc(12) + rem-calc(8 * 5 / 2);
     @include breakpoint(medium) {
         font-size: rem-calc(22) + rem-calc(8 * 5 / 2);
     }
